--- a/public/css/output.css
+++ b/public/css/output.css
@@ -210,6 +210,9 @@
   .my-48 {
     margin-block: calc(var(--spacing) * 48);
   }
+  .mt-4 {
+    margin-top: calc(var(--spacing) * 4);
+  }
   .mt-8 {
     margin-top: calc(var(--spacing) * 8);
   }
